--- a/galleries/templates/galleries/index.html
+++ b/galleries/templates/galleries/index.html
@@ -4,7 +4,46 @@
 
 {% block content %}
 
+		<!-- Page Title
+		============================================= -->
+		<section id="page-title">
 
+			<div class="container clearfix">
+				<h1>Gallery</h1>
+				<span>Pictures of our beautiful fellowship, throughout the years</span>
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="#">Home</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Gallery</li>
+				</ol>
+			</div>
+
+		</section><!-- #page-title end -->
+
+        		<!-- Content
+		============================================= -->
+		<section id="content">
+			<div class="content-wrap">
+				<div class="container clearfix">
+					<h2>2022</h2>
+                    <h3>11월</h3>
+
+					<div class="masonry-thumbs grid-container grid-4" data-big="4" data-lightbox="gallery">
+                        <a class="grid-item" href="{% static 'galleries/full/1.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/1.jpg' %}" alt="Gallery Thumb 1"></a>
+						<a class="grid-item" href="{% static 'galleries/full/2.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/2.jpg' %}" alt="Gallery Thumb 2"></a>
+						<a class="grid-item" href="{% static 'galleries/full/3.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/3.jpg' %}" alt="Gallery Thumb 3"></a>
+                        <a class="grid-item" href="{% static 'galleries/full/4.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/4.jpg' %}" alt="Gallery Thumb 4"></a>
+                        <a class="grid-item" href="{% static 'galleries/full/5.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/5.jpg' %}" alt="Gallery Thumb 5"></a>
+                        <a class="grid-item" href="{% static 'galleries/full/6.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/6.jpg' %}" alt="Gallery Thumb 6"></a>
+                        <a class="grid-item" href="{% static 'galleries/full/7.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/7.jpg' %}" alt="Gallery Thumb 7"></a>
+                        <a class="grid-item" href="{% static 'galleries/full/8.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/8.jpg' %}" alt="Gallery Thumb 8"></a>
+                        <a class="grid-item" href="{% static 'galleries/full/9.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/9.jpg' %}" alt="Gallery Thumb 9"></a>
+                        <a class="grid-item" href="{% static 'galleries/full/10.jpg' %}" data-lightbox="gallery-item"><img src="{% static 'galleries/fixed/10.jpg' %}" alt="Gallery Thumb 10"></a>
+					</div>
+
+					<div class="divider"><i class="icon-circle"></i></div>
+				</div>
+			</div>
+		</section><!-- #content end -->
 
 
 
