--- a/contents/templates/contents/index.html
+++ b/contents/templates/contents/index.html
@@ -3,5 +3,123 @@
 {% load static %}
 
 {% block content %}
+{% comment %} <div class="masonry-thumbs grid-container grid-2 clearfix">
+    <a class="grid-item" href="https://www.youtube.com/watch?v=G_G8SdXktHg" data-lightbox="iframe">
+        <div class="grid-inner">
+            <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Youtube Video">
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-youtube-play h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+    </a>
+    <a class="grid-item" href="https://www.youtube.com/watch?v=G_G8SdXktHg" data-lightbox="iframe">
+        <div class="grid-inner">
+            <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Youtube Video">
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-youtube-play h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+    </a>
+    <a class="grid-item" href="https://www.youtube.com/watch?v=G_G8SdXktHg" data-lightbox="iframe">
+        <div class="grid-inner">
+            <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Youtube Video">
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-youtube-play h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+    </a>
+    <a class="grid-item" href="https://www.youtube.com/watch?v=G_G8SdXktHg" data-lightbox="iframe">
+        <div class="grid-inner">
+            <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Youtube Video">
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-youtube-play h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+    </a>
+</div>  {% endcomment %}
 
+{% comment %} <article class="portfolio-item col-xl-2 col-md-3 col-sm-6 col-12 pf-media pf-icons"
+href="https://www.youtube.com/watch?v=G_G8SdXktHg" data-lightbox="iframe">
+    <div class="grid-inner">
+        <div class="portfolio-image">
+            <a href="portfolio-single.html">
+                <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Open Imagination">
+            </a>
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-youtube-play h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+        <div class="portfolio-desc">
+            <h3><a>여호와는 나의 목자</a></h3>
+            <h6>2022-11-20</h6>
+        </div>
+    </div>
+</article> {% endcomment %}
+
+<div class="masonry-thumbs grid-container grid-3 clearfix">
+    <a class="grid-item" href="https://www.youtube.com/embed/Ef55caEnf14" data-lightbox="iframe">
+        <div class="grid-inner">
+            <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Single Image">
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-line-plus h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+        <h3>특주_여호와는 나의 목자-오수영,최성경</h3><h6>2022년 11월 20일</h6>
+    </a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="image">
+        <div class="grid-inner">
+            <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Single Image">
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-line-plus h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+        <h3>여호와는 나의 목자-추수감사절 예배</h3><h6>2022년 11월 20일 </h6>
+    </a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="image">
+        <div class="grid-inner">
+            <img src="{% static 'contents/images/worship/1.jpg' %}" alt="Single Image">
+            <div class="bg-overlay">
+                <div class="bg-overlay-content dark">
+                    <i class="icon-line-plus h4 mb-0" data-hover-animate="fadeIn"></i>
+                </div>
+                <div class="bg-overlay-bg dark" data-hover-animate="fadeIn"></div>
+            </div>
+        </div>
+        <h3>선하심과 인자하심-추수감사절 예배</h3><h6>2022년 11월 20일</h6>
+    </a>
+</div>
+
+<div class="masonry-thumbs grid-container grid-4" data-big="4" data-lightbox="gallery">
+	<a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+    <a class="grid-item" href="{% static 'contents/images/worship/1.jpg' %}" data-lightbox="iframe"><img src="{% static 'contents/images/worship/1.jpg' %}" alt="Gallery Thumb 1"><h4>선하심과 인자하심-추수감사절 예배</h4><h6>2022년 11월 20일</h6></a>
+  </div>
 {% endblock %}
