게시판코딩

--- a/boards/templates/boards/index.html
+++ b/boards/templates/boards/index.html
@@ -21,6 +21,43 @@
 <section id="content">
     <div class="content-wrap">
         <div class="container clearfix">
+
+            <div class="title-block">
+                <h4>주일예배 메세지</h4>
+                <span> Sunday Worship Message</span>
+            </div>
+
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th>번호</th>
+                    <th>글제목</th>
+                    <th>작성자</th>
+                    <th>작성일</th>
+                    <th>조회수</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
+                  </tr>
+                </tbody>
+              </table>
+
+
+             <br/>
+             <br/>
+             <br/>
+             <br/>
+
+
+
+
+
             <h4>Custom Contents</h4>
             <div class="list-group">
                 <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
