--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -1517,7 +1517,7 @@
 
 				<!-- Page Title
 		============================================= -->
-		<section id="page-title">
+		<!-- <section id="page-title">
 
 			<div class="container clearfix">
 				<h1>{{ page_title }}</h1>
@@ -1528,7 +1528,8 @@
 				</ol>
 			</div>
 
-		</section><!-- #page-title end -->
+		</section> -->
+		<!-- #page-title end -->
 
 		<!-- Content
 		============================================= -->
