--- a/boards/templates/boards/index.html
+++ b/boards/templates/boards/index.html
@@ -43,7 +43,7 @@
                     <td>Mark</td>
                     <td>Otto</td>
                     <td>@mdo</td>
-                    <td>@mdos</td>
+                    <td>@mdo</td>
                   </tr>
                 </tbody>
               </table>
