--- a/boards/templates/boards/index.html
+++ b/boards/templates/boards/index.html
@@ -3,6 +3,17 @@
 {% load static %}
 
 {% block content %}
+<head>
+    <!-- <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Tables - SB Admin</title> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="{% static 'boards/css/styles.css' %}">
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script> -->
+</head>
 <section id="page-title">
 
     <div class="container clearfix">
@@ -27,32 +38,124 @@
                 <span> Sunday Worship Message</span>
             </div>
 
+            <button onclick="location.href= '/boards/addmsg/'">쓰 기</button>
+
+
+            <!-- <div class="card-body">
+                <table id="datatablesSimple">
+                    <thead>
+                        <tr>
+                            <th>번호</th>
+                            <th>글제목</th>
+                            <th>글내용</th>
+                            <th>작성자</th>
+                            <th>작성일</th>
+                            <th>조회수</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for board in Boards %}
+                        <tr>
+                            <td>{{ board.boardno }}</tsd>
+                            <td>{{ board.title }}</td>
+                            <td>{{ board.content }}</td>
+                            <td>{{ board.name }}</td>
+                            <td>{{ board.created_at }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div> -->
+
+
+
+
+
+            <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="/static/js/scripts.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+        <script src="/static/js/datatables-simple-demo.js"></script> -->
+
+
+
+
+
+
+
+
+
+
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+
             <table class="table">
                 <thead>
-                  <tr>
-                    <th>번호</th>
-                    <th>글제목</th>
-                    <th>작성자</th>
-                    <th>작성일</th>
-                    <th>조회수</th>
-                  </tr>
+                    <tr>
+                        <th>번호</th>
+                        <th>글제목</th>
+                        <th>글내용</th>
+                        <th>작성자</th>
+                        <th>작성일</th>
+                        <!-- <th>조회수</th> -->
+                    </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdssasso</td>
-                  </tr>
+                    <!-- for 축약형변수 in 받은 param명 -->
+                    {% for board in page_obj %}
+                    <tr>
+                        <td>{{ board.boardno }}</tsd>
+                        <td>{{ board.title }}</td>
+                        <td>{{ board.content }}</td>
+                        <td>{{ board.name }}</td>
+                        <td>{{ board.created_at }}</td>
+                    </tr>
+                    {% endfor %}
                 </tbody>
               </table>
 
 
-             <br/>
-             <br/>
-             <br/>
-             <br/>
+             <div id="paging">
+                <ul class="pagination justify-content-center" style="margin-top: 2rem;">
+                    <!-- 이전페이지 -->
+                    {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?&page={{ page_obj.previous_page_number }}">이전</a>
+                        <!-- href로 뎁스 설정 -->
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+                    </li>
+                    {% endif %}
+                    <!-- 페이지리스트 -->
+                    {% for page_number in page_obj.paginator.page_range %}
+                    {% if page_number == page_obj.number %}
+                    <li class="page-item active" aria-current="page">
+                        <a class="page-link" href="?&page={{ page_number }}">{{ page_number }}</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item">
+                        <a class="page-link" href="?&page={{ page_number }}">{{ page_number }}</a>
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+                    <!-- 다음페이지 -->
+                    {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?&page={{ page_obj.next_page_number }}">다음</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+            <!-- 페이징처리 끝 -->
 
 
 
