--- a/boards/templates/boards/index.html
+++ b/boards/templates/boards/index.html
@@ -1,8 +1,8 @@
-{% extends 'pages/base.html' %}
+<!-- {% extends 'pages/base.html' %}
 
 {% load static %}
 
-{% block content %}
+{% block content %} -->
 <head>
     <!-- <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -134,7 +134,7 @@
                             
                             $tds[i].onclick = function() {
                                 const no = this.parentNode.children[0].innerText;
-                                location.href = "/boards/detail?boardno=" + no;
+                                location.href = "/boards/detail?no=" + no + "&update=false";
                             }
                             
                         }
@@ -216,4 +216,4 @@
         </div>
     </div>
 </section>
-{% endblock %}
+<!-- {% endblock %} -->
