--- a/boards/templates/boards/index.html
+++ b/boards/templates/boards/index.html
@@ -98,7 +98,7 @@
                         <th>번호</th>
                         <th>글제목</th>
                         <th>글내용</th>
-                        <th>작성자</th>
+                        <th>작성자gd</th>
                         <th>작성일</th>
                         <!-- <th>조회수</th> -->
                     </tr>
