--- a/boards/templates/boards/boardDetail.html
+++ b/boards/templates/boards/boardDetail.html
@@ -4,15 +4,6 @@
 
 {% block content %}
 
-    <!-- <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Tables - SB Admin</title> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="{% static 'boards/css/styles.css' %}">
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script> -->
 		<script>
 			function test() {console.log(window.location.href)}
 
@@ -31,18 +22,39 @@
 		</script>
 	<!-- Content
 		============================================= -->
+		<!-- <section id="page-title">
+
+			<div class="container clearfix">
+				<h1>게시판</h1>
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="#">Home</a></li>
+					<li class="breadcrumb-item"><a href="#">Shortcodes</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Lightbox</li>
+				</ol>
+			</div>
+		
+		</section> -->
+		<!-- #page-title end -->
 		<section id="content">
 
 			<div class="content-wrap bg-light">
 
 				<div class="container">
-
+					
+					<div class="title-block" style="margin-top: -2%;">
+						<h4>주일예배 메세지</h4>
+						<span> Sunday Worship Message</span>
+					</div>
 					<div class="row justify-content-center">
-						<div class="col-lg-7 col-md-10">
+
+
+
+
+						<div class="col-lg-10 col-md-10">
 							<div class="card shadow-sm">
 								<div class="card-header">
 										<h4 class="mb-0">
-											<span style="font-weight: bold; color :black">Form Feilds</span>
+											<span style="font-weight: bold; color :black">게시글</span>
 											<div style="float: right;">
 											{% if update == 'false' %}
 											<button style=" font-size: 85%; border-style: 1px solid green; background-color:transparent;" onclick="location.href= '/boards'">목 록</button>
@@ -377,10 +389,55 @@
 								</div>
 							</div>
 						</div>
-					</div>
 
+						
+						{% if update == 'false' %}
+						<div class="list-group">
+							<div class="title-block" style="margin-top: 4%;">
+								<h4>댓글</h4>
+							</div>
+							<a class="list-group-item list-group-item-action flex-column align-items-start">
+								<div class="d-flex w-100 justify-content-between">
+									<h4 class="mb-2">List group item heading</h4>
+									<small>3 days ago</small>
+								</div>
+								<p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+								<small>Donec id elit non mi porta.</small>
+							</a>
+							<a class="list-group-item list-group-item-action flex-column align-items-start">
+								<h1>CKEditor</h1>
+								<form action="" method="POST">
+								  <textarea name="text" id="editor"></textarea>
+								<p><input type="submit" value="전송"></p>
+								</form>
+								<script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/ckeditor.js"></script>
+								<script>
+								  ClassicEditor.create( document.querySelector( '#editor' ) );
+								</script>
+							</a>
+							<a class="list-group-item list-group-item-action flex-column align-items-start">
+								<div class="d-flex w-100 justify-content-between">
+									<h4 class="mb-2">List group item heading</h4>
+									<small class="text-muted">3 days ago</small>
+								</div>
+								<p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+								<small class="text-muted">Donec id elit non mi porta.</small>
+							</a>
+							<a class="list-group-item list-group-item-action flex-column align-items-start">
+								<div class="d-flex w-100 justify-content-between">
+									<h4 class="mb-2">List group item heading</h4>
+									<small class="text-muted">3 days ago</small>
+								</div>
+								<p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+								<small class="text-muted">Donec id elit non mi porta.</small>
+							</a>
+						</div>
+						{% endif %}
+					</div>
+					
 				</div>
 			</div>
+			
 		</section><!-- #content end -->
 
         <!-- <h4>Custom Contents</h4>
