--- a/boards/templates/boards/index.html
+++ b/boards/templates/boards/index.html
@@ -1,20 +1,9 @@
-<!-- {% extends 'pages/base.html' %}
+{% extends 'pages/base.html' %}
 
 {% load static %}
 
-{% block content %} -->
-<head>
-    <!-- <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Tables - SB Admin</title> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="{% static 'boards/css/styles.css' %}">
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script> -->
-</head>
-<section id="page-title">
+{% block content %} 
+<!-- <section id="page-title">
 
     <div class="container clearfix">
         <h1>게시판</h1>
@@ -25,7 +14,8 @@
         </ol>
     </div>
 
-</section><!-- #page-title end -->
+</section> -->
+<!-- #page-title end -->
 
 <!-- Content
 ============================================= -->
@@ -33,73 +23,19 @@
     <div class="content-wrap">
         <div class="container clearfix">
 
-            <div class="title-block">
+            <div class="title-block" style="margin-top: -2%;">
                 <h4>주일예배 메세지</h4>
                 <span> Sunday Worship Message</span>
             </div>
 
-            <button onclick="location.href= '/boards/addmsg/'">쓰 기</button>
-
-
-            <!-- <div class="card-body">
-                <table id="datatablesSimple">
-                    <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>글제목</th>
-                            <th>글내용</th>
-                            <th>작성자</th>
-                            <th>작성일</th>
-                            <th>조회수</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for board in Boards %}
-                        <tr>
-                            <td>{{ board.boardno }}</tsd>
-                            <td>{{ board.title }}</td>
-                            <td>{{ board.content }}</td>
-                            <td>{{ board.name }}</td>
-                            <td>{{ board.created_at }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div> -->
-
-
-
-
-
-            <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="/static/js/scripts.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
-        <script src="/static/js/datatables-simple-demo.js"></script> -->
-
-
-
-
-
-
-
-
-
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
             <table class="table">
                 <thead>
-                    <tr>
+                    <tr style="text-align: center;">
                         <th>번호</th>
-                        <th>글제목</th>
-                        <th>글내용</th>
+                        <th style="width: 50%;">글제목</th>
                         <th>작성자</th>
-                        <th>작성일</th>
+                        <th style="width: 15%;">작성일</th>
+                        <th>조회수</th>
                         <!-- <th>조회수</th> -->
                     </tr>
                 </thead>
@@ -107,11 +43,12 @@
                     <!-- for 축약형변수 in 받은 param명 -->
                     {% for board in page_obj %}
                     <tr>
-                        <td>{{ board.boardno }}</tsd>
+                        <td style="text-align: center;">{{ board.boardno }}</tsd>
                         <td>{{ board.title }}</td>
-                        <td>{{ board.content }}</td>
-                        <td>{{ board.name }}</td>
-                        <td>{{ board.created_at }}</td>
+                        <td style="text-align: center;">{{ board.name }}</td>
+                        <td style="text-align: center;">{{ board.created_at }}</td>
+                        <td style="text-align: center;">조회수</td>
+                        <!-- <td>{{ board.content }}</td> -->
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -142,6 +79,7 @@
                     }
             </script>
 
+            <button onclick="location.href= '/boards/addmsg/'">쓰 기</button>
 
              <div id="paging">
                 <ul class="pagination justify-content-center" style="margin-top: 2rem;">
@@ -181,39 +119,8 @@
                 </ul>
             </div>
             <!-- 페이징처리 끝 -->
-
-
-
-
-
-            <h4>Custom Contents</h4>
-            <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h4 class="mb-2 text-white">List group item heading</h4>
-                        <small>3 days ago</small>
-                    </div>
-                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                    <small>Donec id elit non mi porta.</small>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h4 class="mb-2">List group item heading</h4>
-                        <small class="text-muted">3 days ago</small>
-                    </div>
-                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                    <small class="text-muted">Donec id elit non mi porta.</small>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h4 class="mb-2">List group item heading</h4>
-                        <small class="text-muted">3 days ago</small>
-                    </div>
-                    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                    <small class="text-muted">Donec id elit non mi porta.</small>
-                </a>
-            </div>
+            
         </div>
     </div>
 </section>
-<!-- {% endblock %} -->
+{% endblock %}
